--- a/Web/src/app/pages/room/room.component.html
+++ b/Web/src/app/pages/room/room.component.html
@@ -1,17 +1,25 @@
 <div class="row">
-    <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6" *ngFor="let unit of units">
-      <ngx-status-card  *ngIf="[unitsType.lamp].includes(unit.type)"  [title]="unit.title" type="primary" [on]="unit.status" (clicked)="updateStatus($event,unit)">
+  <ng-container *ngFor="let unit of units; let indx = index">
+    <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6" *ngIf="[unitsType.lamp].includes(unit.type)">
+      <ngx-status-card [title]="unit.title" type="primary" [on]="unit.status" (clicked)="updateStatus($event,unit)">
         <i class="nb-lightbulb"></i>
       </ngx-status-card>
-      <ngx-slider *ngIf="unit.type === unitsType.analog" [(value)]="unit.value" [min]="unit.min" [max]="unit.max" [status]="unit.status" (clicked)="updateStatus($event, unit)" (change)="updateValue($event,unit)"  ></ngx-slider>
     </div>
-  </div>
-  <div class="row">
+
+    <hr  class="col-xxxl-12 col-xxl-12  col-md-12" *ngIf="indx != 0 && units[indx-1].type != unit.type">
+
+    <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6" *ngIf="unit.type === unitsType.analog">
+
+      <ngx-slider [(value)]="unit.value" [min]="unit.min" [max]="unit.max" [status]="unit.status" (clicked)="updateStatus($event, unit)"
+        (change)="updateValue($event,unit)"></ngx-slider>
+    </div>
+  </ng-container>
+</div>
+<!-- <div class="row">
     <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
       <ngx-temperature></ngx-temperature>
     </div>
-</div>  
+</div>   -->
 <div class="row">
-   
-</div>  
 
+</div>
